--- a/public/index.html
+++ b/public/index.html
@@ -110,11 +110,12 @@
 
   <main aria-role="main" class="main">
   <head>
+  <script src="https://d3js.org/d3.v4.js"></script>
   <script src="assets/css/custom.css" ref="stylesheet"></script>
   </head>
     <header class="homepage-header">
-      <h1 class="header-text">Leveraging data to investigate illicit finance and the business networks behind crime and war</h1>
-      <img class="header-image" src="images/header.jpg"> </image>
+      <h1 class="header-text">Analyst for data driven companies</h1>
+      <div id="my_dataviz"></div>
     </header>
     <div class="content">
      <h1 >Insights</h1>
@@ -134,6 +135,56 @@
     
     </div>
   </main>
+
+
+<script>
+
+
+var margin = {top: 10, right: 30, bottom: 30, left: 60},
+    width = 460 - margin.left - margin.right,
+    height = 400 - margin.top - margin.bottom;
+
+
+var svg = d3.select("#my_dataviz")
+  .append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform",
+          "translate(" + margin.left + "," + margin.top + ")");
+
+
+d3.csv("https://raw.githubusercontent.com/holtzy/data_to_viz/master/Example_dataset/2_TwoNum.csv", function(data) {
+
+  
+  var x = d3.scaleLinear()
+    .domain([0, 4000])
+    .range([ 0, width ]);
+  svg.append("g")
+    .attr("transform", "translate(0," + height + ")")
+    .call(d3.axisBottom(x));
+
+  
+  var y = d3.scaleLinear()
+    .domain([0, 500000])
+    .range([ height, 0]);
+  svg.append("g")
+    .call(d3.axisLeft(y));
+
+  
+  svg.append('g')
+    .selectAll("dot")
+    .data(data)
+    .enter()
+    .append("circle")
+      .attr("cx", function (d) { return x(d.GrLivArea); } )
+      .attr("cy", function (d) { return y(d.SalePrice); } )
+      .attr("r", 1.5)
+      .style("fill", "#69b3a2")
+
+})
+
+</script>
 
       <footer class="hextra-footer bg-gray-100 pb-[env(safe-area-inset-bottom)] dark:bg-neutral-900 print:bg-transparent"><div
     class="max-w-screen-xl mx-auto flex justify-center py-12 pl-[max(env(safe-area-inset-left),1.5rem)] pr-[max(env(safe-area-inset-right),1.5rem)] text-gray-600 dark:text-gray-400 md:justify-start"
