--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,9 @@
 
   
   <meta itemprop="name" content="Leveraging data to investigate illicit finance and the business networks behind crime and war">
-  <meta itemprop="description" content=" 📡 Published Projects GroupintAn open-source app that maps who&rsquo;s talking to whom on Telegram Know Your SanctionsKnow Your Sanctions is an open-source screening platform with data on sanctioned entities and their network of sanctions evaders. Illicit FinanceIllicit Finance is a newsletter where I publish results from investigations into illicit finance. 🌐 Insights ">
-  <meta itemprop="wordCount" content="52"><meta name="twitter:card" content="summary"><meta name="twitter:title" content="Leveraging data to investigate illicit finance and the business networks behind crime and war">
+  <meta itemprop="description" content="💡 What I do I&rsquo;m a data analyst and researcher with &#43;3 years of experience in open source intelligence and anti-money laundering.
+What is your experience with research? My experience includes parliamentary work, think tanks, and companies with a focus on compliance and AML regulations. What is your role as a data analyst My work as a data analyst takes you from step one to actionable insights. I design research methods, automate processes, merge and clean datasets and make recommendations based on actionable insights in your data.">
+  <meta itemprop="wordCount" content="167"><meta name="twitter:card" content="summary"><meta name="twitter:title" content="Leveraging data to investigate illicit finance and the business networks behind crime and war">
 <meta name="twitter:description" content="">
 
     <link href="/css/compiled/main.css" rel="stylesheet" />
@@ -120,6 +121,45 @@
     <div class="content">
     
     
+
+<div class="hextra-cards mt-4 gap-4 grid not-prose" style="--rows: 3;">
+  <a
+    class="hextra-card group flex flex-col justify-start overflow-hidden rounded-lg border border-gray-200 text-current no-underline dark:shadow-none hover:shadow-gray-100 dark:hover:shadow-none shadow-gray-100 active:shadow-sm active:shadow-gray-200 transition-all duration-200 hover:border-gray-300 bg-transparent shadow-sm dark:border-neutral-800 hover:bg-slate-50 hover:shadow-md dark:hover:border-neutral-700 dark:hover:bg-neutral-900"href="/" ><span class="flex font-semibold items-start gap-2 p-4 text-gray-700 hover:text-gray-900 dark:text-neutral-200 dark:hover:text-neutral-50">💡 What I do</span></a>
+</div>
+
+<p>I&rsquo;m a data analyst and researcher with +3 years of experience in open source intelligence and anti-money laundering.</p>
+<details class="last-of-type:mb-0 rounded-lg bg-neutral-50 dark:bg-neutral-800 p-2 mt-4 group" >
+  <summary class="flex items-center cursor-pointer select-none list-none p-1 rounded transition-colors hover:bg-gray-100 dark:hover:bg-neutral-800 before:mr-1 before:inline-block before:transition-transform before:content-[''] dark:before:invert rtl:before:rotate-180 group-open:before:rotate-90">
+    <strong class="text-lg">What is your experience with research?</strong>
+  </summary>
+  <div class="p-2 overflow-hidden">
+    My experience includes parliamentary work, think tanks, and companies with a focus on compliance and AML regulations.
+  </div>
+</details>
+<details class="last-of-type:mb-0 rounded-lg bg-neutral-50 dark:bg-neutral-800 p-2 mt-4 group" >
+  <summary class="flex items-center cursor-pointer select-none list-none p-1 rounded transition-colors hover:bg-gray-100 dark:hover:bg-neutral-800 before:mr-1 before:inline-block before:transition-transform before:content-[''] dark:before:invert rtl:before:rotate-180 group-open:before:rotate-90">
+    <strong class="text-lg">What is your role as a data analyst</strong>
+  </summary>
+  <div class="p-2 overflow-hidden">
+    My work as a data analyst takes you from step one to actionable insights. I design research methods, automate processes, merge and clean datasets and make recommendations based on actionable insights in your data.
+  </div>
+</details>
+<details class="last-of-type:mb-0 rounded-lg bg-neutral-50 dark:bg-neutral-800 p-2 mt-4 group" >
+  <summary class="flex items-center cursor-pointer select-none list-none p-1 rounded transition-colors hover:bg-gray-100 dark:hover:bg-neutral-800 before:mr-1 before:inline-block before:transition-transform before:content-[''] dark:before:invert rtl:before:rotate-180 group-open:before:rotate-90">
+    <strong class="text-lg">What is your tech stack?</strong>
+  </summary>
+  <div class="p-2 overflow-hidden">
+    <p>I&rsquo;m a hobbyist who learnt to programme through projects. Here are the programming languages that I use most frequently</p>
+<ul>
+<li>Python</li>
+<li>SQL</li>
+<li>Golang</li>
+<li>Javascript</li>
+</ul>
+  </div>
+</details>
+<p><br></br></p>
+
 
 <div class="hextra-cards mt-4 gap-4 grid not-prose" style="--rows: 3;">
   <a
