--- a/public/index.html
+++ b/public/index.html
@@ -224,8 +224,7 @@ Python SQL Golang Javascript How can I reach you?">
         <h1>Automate Excel with Python  </h1>
       </a>
     </header>
-
-  </article>
+    </article>
 
    
  
@@ -235,11 +234,10 @@ Python SQL Golang Javascript How can I reach you?">
     <header>
       <img src="https://dims.apnews.com/dims4/default/65f8aeb/2147483647/strip/true/crop/3000x2000&#43;0&#43;0/resize/1440x960!/format/webp/quality/90/?url=https%3A%2F%2Fstorage.googleapis.com%2Fafs-prod%2Fmedia%2F338de5cc3daa4d4192fb49b95ebc0017%2F3000.jpeg" alt="blog image"> </img>
       <a class="" href="http://localhost:1313/posts/enrichment/"style="text-decoration: none;">
-        <h1>Financial interets of British MPs - a case study in enriching PEP data  </h1>
+        <h1>The financial interests of British politicians - a case study in enriching PEP data  </h1>
       </a>
     </header>
-
-  </article>
+    </article>
 
    
 
